not so happy with this approach atm.

--- a/blockscript/test.html
+++ b/blockscript/test.html
@@ -1,11 +1,12 @@
 <html>
 <head>
-    <script src="lodash.core.js" ></script>
+    <script src="lodash.js" ></script>
     <script>
         var lodash = _;
         function require(x){return eval(x)}        
     </script>
     <script src="blockscript.js" ></script>
+    <script src="testscripts.js" ></script>
 </head>
 <body>
 </body>
