--- a/blockscript/test.html
+++ b/blockscript/test.html
@@ -5,7 +5,7 @@
         var lodash = _;
         function require(x){return eval(x)}        
     </script>
-    <script src="blockscript.js" ></script>
+    <script src="blockscript2.js" ></script>
     <script src="testscripts.js" ></script>
 </head>
 <body>
