--- a/blockscript/test.html
+++ b/blockscript/test.html
@@ -7,6 +7,7 @@
     </script>
     <script src="blockscript2.js" ></script>
     <script src="testscripts.js" ></script>
+    <script src="testcase.js" ></script>
 </head>
 <body>
 </body>
