moved code around

--- a/blockscript/test.html
+++ b/blockscript/test.html
@@ -5,6 +5,8 @@
         var lodash = _;
         function require(x){return eval(x)}        
     </script>
+    <script src="meta.js" ></script>    
+    <script src="execution.js" ></script>    
     <script src="blockscript2.js" ></script>
     <script src="testscripts.js" ></script>
     <script src="testcase.js" ></script>
