deleted unused files

--- a/blockscript/test.html
+++ b/blockscript/test.html
@@ -7,7 +7,7 @@
     </script>
     <script src="meta.js" ></script>    
     <script src="execution.js" ></script>    
-    <script src="blockscript2.js" ></script>
+    <script src="blockscript.js" ></script>
     <script src="testscripts.js" ></script>
     <script src="testcase.js" ></script>
 </head>
